--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -71,10 +71,10 @@ label, input {
 }
 input {
   padding: 10px;
-  margin-top: 10px;
-  margin-bottom: 20px;
+  margin-top: 15px;
+  margin-bottom: 15px;
   width: 100%;
-  border: 1px solid #ddd;
+  border: 1px solid rgb(13, 63, 3);
   border-radius: 4px;
   box-sizing: border-box;
 }
