--- a/frontend/src/pages/Instructor.module.css
+++ b/frontend/src/pages/Instructor.module.css
@@ -56,6 +56,12 @@
     background-color: darkblue;
   }
   
+  .answer {
+    width: 10X; /* Set desired width */
+    height: 200px; /* Set desired height */
+    /* Add any other custom styles here */
+  }
+  
   
   
     
