--- a/frontend/src/pages/Home.module.css
+++ b/frontend/src/pages/Home.module.css
@@ -117,13 +117,14 @@
 
 
   
-  body {
+/*  body {
     background-image: url("./images/background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    background-color: #cccccc;
     
     
-    }
+    }*/
    /* Set up white rectangle container */
 .home-page .form-container {
   max-width: 300px;
