--- a/frontend/src/pages/Instructor.module.css
+++ b/frontend/src/pages/Instructor.module.css
@@ -61,6 +61,35 @@
     height: 200px; /* Set desired height */
     /* Add any other custom styles here */
   }
+  .courseCard {
+    width: 350px;
+    margin-bottom: 20px;
+    margin-right: 30px;
+    border-radius: 30px;
+    box-shadow: 30px 20px 0px rgba(0, 0, 0, 0.1);
+  }
+  
+  .cardTitle {
+    font-size: 2em;
+    display: flex;
+justify-content: center;
+align-items: center;
+
+  }
+  .cardButtons {
+    display: flex;
+    justify-content: space-between;
+  }
+  .courses{
+    font-size: 2em;
+    display: flex;
+justify-content: center;
+align-items: center;
+    font-weight: bold;
+    margin-bottom: 20px;
+color: #000;
+  }
+ 
   
   
   
