--- a/frontend/src/pages/Instructor.module.css
+++ b/frontend/src/pages/Instructor.module.css
@@ -8,6 +8,7 @@
     height: 100vh;
   }
   
+  
   .loader {
     border: 16px solid #f3f3f3; 
     border-top: 16px solid #3498db;
@@ -169,7 +170,7 @@ color: #000;
     border: 2px solid #ccc;
     border-radius: 30px;
     font-size: 1rem;
-    min-width: 200px; /* adjust this value as needed */
+    min-width: 150px; /* adjust this value as needed */
     box-sizing: border-box;
   }
   
@@ -244,6 +245,12 @@ color: #000;
     letter-spacing: 1px;
     border-bottom: 2px solid #ccc;
     padding-bottom: 0.5rem;
+  }
+  .invisible {
+    display: none;
+    visibility: hidden;
+    max-width:  0;
+    height: 0;
   }
   
   
