--- a/frontend/src/pages/Instructor.module.css
+++ b/frontend/src/pages/Instructor.module.css
@@ -252,7 +252,12 @@ color: #000;
     max-width:  0;
     height: 0;
   }
-  
+  canvas {
+    display: block;
+    margin: 0 auto;
+    border: 2px solid black;
+    background-color: white;
+  }
   
   
   
