--- a/frontend/src/pages/Instructor.module.css
+++ b/frontend/src/pages/Instructor.module.css
@@ -256,7 +256,7 @@ color: #000;
     display: block;
     margin: 0 auto;
     border: 2px solid black;
-    background-color: white;
+    background-color: rgb(235, 226, 226);
   }
   
   
