--- a/frontend/src/pages/Home.module.css
+++ b/frontend/src/pages/Home.module.css
@@ -125,6 +125,11 @@
     
     
     }*/
+    body {
+      background:  url("./images/b.png");
+      background-repeat:  repeat;
+    }
+    
    /* Set up white rectangle container */
 .home-page .form-container {
   max-width: 300px;
