--- a/frontend/src/pages/Home.module.css
+++ b/frontend/src/pages/Home.module.css
@@ -125,10 +125,10 @@
     
     
     }*/
-    body {
+    /* body {
       background:  url("./images/b.png");
       background-repeat:  repeat;
-    }
+    } */
     
    /* Set up white rectangle container */
 .home-page .form-container {
