--- a/frontend/src/custom-theme.css
+++ b/frontend/src/custom-theme.css
@@ -12,7 +12,7 @@
   
   /* Apply theme colors to elements */
   body {
-    background-color: var(--light-color);
+    background-color: #133549;
   }
   
   header {
